src/builder/tests/select/snapshots/ciboulette2postgres__builder__tests__select__select_main__include_multi.snap
---
source: src/builder/tests/select/select_main.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_data" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $1 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $2,
      "public"."peoples"."age",
      $3,
      "public"."peoples"."first-name",
      $4,
      "public"."peoples"."gender",
      $5,
      "public"."peoples"."last-name",
      $6,
      "public"."peoples"."twitter"
    ) AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color"
  FROM
    "public"."peoples"
  WHERE
    "public"."peoples"."id" = $7
),
"cte_rel_people-article_rel_data" AS (
  SELECT
    "public"."people-article"."id" :: TEXT AS "id",
    "public"."people-article"."article_id" AS "rel_article_id",
    "public"."people-article"."people_id" AS "rel_people_id"
  FROM
    "public"."people-article"
    INNER JOIN "cte_peoples_data" ON "public"."people-article"."people_id" = "cte_peoples_data"."main_id"
),
"cte_rel_articles_data" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    "public"."articles"."id" AS "main_id",
    "cte_rel_people-article_rel_data"."rel_people_id" :: TEXT AS "related_id",
    $8 :: TEXT AS "related_type",
    $9 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $10,
      "public"."articles"."body",
      $11,
      "public"."articles"."title"
    ) AS "data"
  FROM
    "public"."articles"
    INNER JOIN "cte_rel_people-article_rel_data" ON "cte_rel_people-article_rel_data"."rel_article_id" = "public"."articles"."id"
)(
  SELECT
    "cte_rel_articles_data"."id",
    "cte_rel_articles_data"."type",
    "cte_rel_articles_data"."data",
    "cte_rel_articles_data"."related_type",
    "cte_rel_articles_data"."related_id"
  FROM
    "cte_rel_articles_data"
)
UNION
ALL (
  SELECT
    "cte_peoples_data"."id",
    "cte_peoples_data"."type",
    "cte_peoples_data"."data",
    "cte_peoples_data"."related_type",
    "cte_peoples_data"."related_id"
  FROM
    "cte_peoples_data"
);
